--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// My SCSS
+@import 'declaration';
+
+// fonts
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
