--- a/resources/sass/_declaration.scss
+++ b/resources/sass/_declaration.scss
@@ -9,29 +9,50 @@ p, h2{
     padding: 0;
 }
 
+a{
+    color: gray;
+}
+
 .dec_box{
+    position: relative;
     border: 1px solid $gray;
     border-radius: 10px;
     margin-bottom: 20px;
     padding: 10px;
     div:first-child{
-        font-size: 15px;
+        font-size: 12px;
+        p{
+            color: gray;
+            a{
+                position: relative;
+                z-index: 100;
+            }
+        }
         + p{
-            font-size: 16px;
+            font-size: 15px;
             display: -webkit-box;
             -webkit-box-orient: vertical;
-            -webkit-line-clamp: 5;
+            -webkit-line-clamp: 3;
             overflow: hidden;
-            margin: 10px 0;
+            margin: 5px 0;
         }
     }
     h2{
-        font-size: 20px;
+        font-size: 18px;
+        font-weight: 900;
     }
     div:last-child{
-        font-size: 15px;
+        color: gray;
+        font-size: 12px;
         div{
             line-height: 20px;
         }
+    }
+    > a{
+        position: absolute;
+        top: 0;
+        left: 0;
+        height:100%;
+        width: 100%;
     }
 }
