--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,22 @@
 // My SCSS
 @import 'declaration/index';
 @import 'declaration/show';
+@import 'declaration/create';
+@import 'declaration/confirm';
+@import 'user/show';
 
 // fonts
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
+
+
+// 共通CSS
+// ナビバー
+.nav_content{
+    a{
+        margin: 5px 60px 5px 0;
+        text-decoration: none;
+    }
+    a:last-child{
+        margin: 5px 0;
+    }
+}
