--- a/resources/sass/declaration/_show.scss
+++ b/resources/sass/declaration/_show.scss
@@ -3,6 +3,7 @@
     padding: 0 20px;
     div:first-child{
         p{
+            color: gray;
             font-size: 14px;
         }
         + p{
@@ -11,7 +12,7 @@
         }
     }
 
-    div:last-child{
+    div:nth-child(2){
         font-size: 14px;
     }
 }
