2022-07-29 DoIt_GoodWork_add

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,12 @@
 // fonts
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
+// Font Awesome
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+
 
 // 共通CSS
 // ナビバー
@@ -28,4 +34,12 @@
     a:last-child{
         margin: 5px 0;
     }
+}
+
+.liked {
+    color: red;
+}
+
+textarea {
+    resize: none;
 }
