--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,7 +25,6 @@
 
 
 // 共通CSS
-// ナビバー
 .nav_content{
     a{
         margin: 5px 60px 5px 0;
@@ -42,4 +41,30 @@
 
 textarea {
     resize: none;
+}
+
+body{
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
+p, h2{
+    margin: 0;
+    padding: 0;
+}
+
+a{
+    color: gray;
+}
+
+.card{
+    margin-bottom: 30px;
+}
+
+.link_box{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height:100%;
+    width: 100%;
+    z-index: 0;
 }
