--- a/resources/sass/declaration/_index.scss
+++ b/resources/sass/declaration/_index.scss
@@ -1,67 +1,41 @@
 $gray: rgb(220, 220, 220);
 
-body{
-    font-family: 'Noto Sans JP', sans-serif;
-}
-
-p, h2{
-    margin: 0;
-    padding: 0;
-}
-
-a{
-    color: gray;
-}
-
-.card{
-    margin-bottom: 30px;
-}
-
-.dec_box{
+/* mixin */
+@mixin z-index{
     position: relative;
-    border-bottom: 1px solid $gray;
-    border-radius: 5px;
+    z-index: 100;
+}
+
+.declaration{
+    padding: 0 20px 20px 20px;
     margin-bottom: 20px;
-    padding-bottom: 20px;
-    div:first-child{
-        font-size: 12px;
-        div:nth-child(2){
-            padding-top: 10px;
-            a{
-                position: relative;
-                z-index: 100;
+    border-bottom: solid 1px $gray;
+    border-radius: 10px;
+    &__title{
+        font-size: 20px;
+        font-weight: 900;
+    }
+    &__date{
+        font-size: 15px;
+        &--top{
+            span:first-child{
+                @include z-index();
             }
         }
-        + p{
-            font-size: 15px;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 3;
-            overflow: hidden;
-            margin: 0 10px 10px 10px;
-        }
     }
-    h2{
-        font-size: 18px;
-        font-weight: 900;
-        padding-top: 10px;
+    &__body{
+        margin: 20px 10px;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        overflow: hidden;
     }
-    div:nth-child(2){
-        font-size: 12px;
-        div{
-            line-height: 20px;
-        }
-    }
-    > a{
-        position: absolute;
-        top: 0;
-        left: 0;
-        height:100%;
-        width: 100%;
-        z-index: 0;
+    &__badge{
+        @include z-index();
+        text-decoration: none;
     }
 }
 
-.dec_box:last-child{
+.declaration:last-child{
     border: none;
 }
