--- a/resources/sass/declaration/_index.scss
+++ b/resources/sass/declaration/_index.scss
@@ -7,6 +7,7 @@ $gray: rgb(220, 220, 220);
 }
 
 .declaration{
+    position: relative;
     padding: 0 20px 20px 20px;
     margin-bottom: 20px;
     border-bottom: solid 1px $gray;
