--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10935,6 +10935,11 @@ textarea.form-control-lg {
   z-index: 100;
   text-decoration: none;
 }
+.declaration__share {
+  position: relative;
+  top: 10px;
+  right: 10px;
+}
 
 .declaration:last-child {
   border: none;
