--- a/resources/sass/declaration/_show.scss
+++ b/resources/sass/declaration/_show.scss
@@ -15,6 +15,13 @@
     }
 }
 
+.report{
+    margin: 20px;
+    h2{
+        font-size: 20px;
+    }
+}
+
 .comment{
     border-bottom: 1px solid $gray;
     margin: 20px 10px;
@@ -57,6 +64,12 @@
         &__body{
             font-size: 13px;
             margin: 20px 10px;
+        }
+        &__like{
+            font-size: 10px;
+        }
+        &__nav{
+            font-size: 10px;
         }
     }
 
