--- a/resources/sass/user/_show.scss
+++ b/resources/sass/user/_show.scss
@@ -1,3 +1,67 @@
-.user_box{
-    padding: 10px;
+.user-show{
+    margin: 20px 10px;
+}
+
+.follow{
+    padding: 15px 0;
+    border-bottom: solid 1px $gray;
+    border-radius: 10px;
+}
+
+.follow:last-child{
+    border: none;
+}
+
+
+@media screen and (max-width: 767px) {
+    .user-show{
+        &__image{
+            width: 40px;
+            height: 40px;
+        }
+        &__text{
+            font-size: 10px;
+            position: relative;
+            right: 10px;
+        }
+        &__follow{
+            a{
+                display: block;
+                font-size: 10px;
+            }
+        }
+        &__button{
+            font-size: 10px;
+        }
+    }
+
+    .follow{
+        &__name{
+            position: relative;
+            left: 20px;
+            font-size: 10px;
+        }
+        &__body{
+            position: relative;
+            left: 20px;
+            bottom: 10px;
+            font-size: 10px;
+        }
+        &__follow{
+            a{
+                font-size: 10px;
+            }
+        }
+        &__button{
+            font-size: 10px;
+        }
+    }
+
+    .user{
+        &__other{
+            position: relative;
+            z-index: 100;
+            top: 50px;
+        }
+    }
 }
