--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3773,7 +3773,11 @@ textarea.form-control-lg {
   --bs-navbar-toggler-border-radius: 0.375rem;
   --bs-navbar-toggler-focus-width: 0.25rem;
   --bs-navbar-toggler-transition: box-shadow 0.15s ease-in-out;
-  position: relative;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 1000;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
