--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3773,11 +3773,7 @@ textarea.form-control-lg {
   --bs-navbar-toggler-border-radius: 0.375rem;
   --bs-navbar-toggler-focus-width: 0.25rem;
   --bs-navbar-toggler-transition: box-shadow 0.15s ease-in-out;
-  position: fixed;
-  width: 100%;
-  left: 0;
-  top: 0;
-  z-index: 1000;
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -21549,6 +21545,13 @@ readers do not read off random characters that represent icons */
 
 .fa-zhihu:before {
   content: "\f63f";
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .nav_content a {
